Version tablette correction css responsive

--- a/booki/css/style.css
+++ b/booki/css/style.css
@@ -254,7 +254,7 @@ input::placeholder {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 /* Card Popularity */
 .card-popularity {
@@ -320,14 +320,22 @@ input::placeholder {
 .link-footer li {
     list-style-type: none;
     margin-top: 0.6em;
-    font-size: 0.9em;
 }
 /***** MEDIA QUERIES *****/
 /*** Mode Tablette ***/
 @media screen and (max-width: 992px) {
     /*** Header ***/
+    .header-nav {
+        margin-top: 0;
+    }
     .navigation {
         padding: 30px 30px 15px 30px;
+    }
+    .link-navigation a {
+        margin: 0;
+    }
+    .link-navigation a:hover {
+        padding-top: 2.75em;
     }
     /*** Search Bar ***/
     .form i {
@@ -337,6 +345,7 @@ input::placeholder {
     .tag {
         width: 100%;
         display: flex;
+        justify-content: space-around;
     }
     /*** Main Section ***/
     .first-section {
@@ -364,19 +373,30 @@ input::placeholder {
     /*** Right Section ***/
     .right-section {
         width: 95%;
+        height: 260px;
     }
     .title-right-section {
-        width: 95%;
-        margin: 0 24px;
+        width: 90%;
+        margin: 0 3em;
         justify-content: space-between;
+    }
+    .title-right-section i {
+        margin-right: 0;
     }
     .card-right-section {
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-evenly;
         width: 100%;
+        height: 60%;
+    }
+    .card-text-right {
+        justify-content: space-between;
+    }
+    .card-text-right h3 {
+        margin-top: 0.8em;
     }
     .card-popularity {
-        width: 230px;
+        width: 250px;
     }
     .card-popularity img {
         border-radius: 20px 0 0 20px;
@@ -395,8 +415,8 @@ input::placeholder {
         height: 250px;
     }
     .title-activity {
-        margin: 5px;
-        padding-left: 10px;
+        margin: 0.8em 0.5em 0.5em;
+        padding-left: 0.5em;
     }
 }
 /*** Mode Mobile ***/
